--- a/package.json
+++ b/package.json
@@ -29,19 +29,21 @@
     "tree-view"
   ],
   "dependencies": {
-    "core-js": "^3.6.5",
-    "jquery": "^3.6.0",
-    "vue": "^3.0.0",
     "@vue/cli-plugin-babel": "~4.5.11",
     "@vue/cli-plugin-eslint": "~4.5.11",
     "@vue/cli-service": "~4.5.11",
     "@vue/compiler-sfc": "^3.0.0",
     "@vue/eslint-config-prettier": "^6.0.0",
     "babel-eslint": "^10.1.0",
+    "core-js": "^3.6.5",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.0.0",
-    "prettier": "^2.2.1"
+    "jquery": "^3.6.0",
+    "mdb-ui-kit": "^4.4.0",
+    "mdb-vue-ui-kit": "^2.0.0",
+    "prettier": "^2.2.1",
+    "vue": "^3.0.0"
   },
   "eslintConfig": {
     "root": true,
