--- a/package.json
+++ b/package.json
@@ -40,10 +40,12 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.0.0",
     "jquery": "^3.6.0",
+    "lodash": "^4.17.21",
     "mdb-ui-kit": "^4.4.0",
     "mdb-vue-ui-kit": "^2.0.0",
     "prettier": "^2.2.1",
-    "vue": "^3.0.0"
+    "vue": "^3.0.0",
+    "vue-orgchart": "^1.1.7"
   },
   "eslintConfig": {
     "root": true,
@@ -69,5 +71,8 @@
   "bugs": {
     "url": "https://github.com/AugustinRibreau/vue3-orgchart/issues"
   },
-  "homepage": "https://github.com/AugustinRibreau/vue3-orgchart#readme"
+  "homepage": "https://github.com/AugustinRibreau/vue3-orgchart#readme",
+  "devDependencies": {
+    "@types/lodash-es": "^4.17.6"
+  }
 }
